# libjitsimeet

./: .gitmodules  meson.build  submodules.txt
src/: array-util.hpp  assert.hpp  async-websocket.cpp  async-websocket.hpp  base64.cpp  base64.hpp  caps.cpp  caps.hpp  codec-type.hpp  colibri.cpp  colibri.hpp  conference.cpp  conference.hpp  config.hpp  event-buffer.hpp  example.cpp  jingle-handler.hpp  meson.build  random.cpp  random.hpp  sha.cpp  sha.hpp  unwrap.hpp  uri.cpp  uri.hpp  websocket.cpp  websocket.hpp
src/jingle/: common.hpp  deparser.cpp  jingle.cpp  jingle.hpp  parser.cpp  serde
src/jingle-handler/: cert.cpp  hostaddr.cpp  ice.cpp  ice.hpp  jingle.cpp  jingle.hpp  pem.cpp
src/xmpp/: connection.cpp  connection.hpp  elements.hpp  extdisco.cpp  extdisco.hpp  jid.cpp  jid.hpp  muc.hpp  negotiator.cpp  negotiator.hpp
